syntax = "proto3";

option java_package = "org.example.grpc_server.proto";
option java_multiple_files = true;

service OrderService {
  rpc GetOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string orderId = 1;
}

message OrderResponse {
  string orderId = 1;
  string customerName = 2;
  double totalAmount = 3;
}
